manifests-notesapp/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notesapp-ingress
  namespace: notesapp
spec:
  ingressClassName: nginx
  rules:
    - host: notesapp.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: notesapp-be-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notesapp-fe-service
                port:
                  number: 80
